# langchain_and_dev

./: README.md  pyproject.toml  run_notebook.py
ReAct_agent/: db_agent.ipynb  demo.py  init_db.py  react.ipynb  reactwithdb.ipynb
basics/: basics.ipynb  inputbasedllmcall.ipynb  messages.ipynb
chain/: basicchain.ipynb
frontend/: package-lock.json  package.json
frontend/app/: actions.ts  page.tsx
